Version 2.1.133
    New Skill - Tridents
    New Skill - Crossbows

    New config file named 'tridents.yml'

    New command /tridents - Skill Info for Tridents
    New command /crossbows - Skill Info for Crossbows

    Added Sub-Skill named Multi Tasking to Tridents
    Added Sub-Skill named Cone of Death to Crossbows

    (These permissions are all included in the mcmmo.defaults node)
    New permission node 'mcmmo.commands.tridents'
    New permission node 'mcmmo.skills.tridents'
    New permission node 'mcmmo.ability.tridents.all'
    New permission node 'mcmmo.ability.tridents.multitasking'
    New permission node 'mcmmo.ability.tridents.tridentslimitbreak'

    New permission node 'mcmmo.commands.crossbows'
    New permission node 'mcmmo.skills.crossbows'
    New permission node 'mcmmo.ability.crossbows.all'
    New permission node 'mcmmo.ability.crossbows.crossbowslimitbreak'
    New permission node 'mcmmo.ability.crossbows.coneofdeath'

    Added new locale string 'Overhaul.Name.Tridents'
    Added new locale string 'Tridents.SubSkill.TridentsLimitBreak.Name'
    Added new locale string 'Tridents.SubSkill.TridentsLimitBreak.Description'
    Added new locale string 'Tridents.SubSkill.TridentsLimitBreak.Stat'

    Added new locale string 'Overhaul.Name.Crossbows'
    Added new locale string 'Crossbows.SubSkill.CrossbowsLimitBreak.Name'
    Added new locale string 'Crossbows.SubSkill.CrossbowsLimitBreak.Description'
    Added new locale string 'Crossbows.SubSkill.CrossbowsLimitBreak.Stat'

    Added XP bar settings for Tridents & Crossbows to experience.yml
    Changed some debug level logging to info level for convenience
    XP Bar settings (set by /mmoxpbar command) are now saved per player

    Notes:
    These are the first new skills that I've written for mcMMO in about 9 years, I'll be listening closely to feedback and tweaking them often.

Version 2.1.132