@@ -10,6 +10,9 @@ Version 2.1.133
     Added Sub-Skill named Multi Tasking to Tridents
     Added Sub-Skill named Cone of Death to Crossbows
 
+    Permission node descriptions had mentions of ability changed to sub-skill and other minor corrections
+
+
     (These permissions are all included in the mcmmo.defaults node)
     New permission node 'mcmmo.commands.tridents'
     New permission node 'mcmmo.skills.tridents'
